[package]
name = "winapi-kmd"
version = "0.1.0"
description = "Windows Kernel Mode support library."
keywords = ["windows", "ffi", "drivers", "wdk", "ddk", "Four-F"]

authors = ["pravic <ehysta@gmail.com>"]
repository = "https://github.com/pravic/winapi-kmd-rs"
documentation = "http://pravic.github.io/winapi-kmd-rs"
readme = "README.md"
license = "MIT"

[lib]
name = "km"
crate-type = ["rlib"]

[dependencies]
alloc_system = { path="src/alloc" }
core = { path= "../libcore", version="*" }
collections = { path = "../libcollections" }

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 4
