[package]
name = "rust.drv.examples.minimal"
description = "Minimal Windows kernel driver sample."
version = "0.1.0"
authors = ["pravic <ehysta@gmail.com>"]
readme = "../README.md"

build = "../build.rs"

[lib]
path = "driver.rs"
name = "minimal"
crate-type = ["dylib"]

test = false
bench = false

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false

[dependencies]
winapi-kmd  = { path = "../../../km", version="*" }
core        = { path = "../../../libcore", version = "*" }
